[GTK] Respect dark mode and contrast of libadwaita https://bugs.webkit.org/show_bug.cgi?id=254135

Reviewed by NOBODY (OOPS!).

libadwaita has its own settings for dark mode and also
uses host information so its a much more reliable way
to determine this.

* Source/WebCore/platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::ThemeAdwaita):
(WebCore::ThemeAdwaita::refreshSettings):
* Source/WebCore/platform/adwaita/ThemeAdwaita.h:
* Source/WebCore/platform/glib/SettingsStateGLib.h:
* Source/WebCore/platform/glib/SystemSettingsGLib.h:
(WebCore::SystemSettingsGLib::darkMode const):
(WebCore::SystemSettingsGLib::highContrast const):
* Source/WebKit/Shared/glib/ArgumentCodersGLib.serialization.in:
* Source/WebKit/UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::effectiveAppearanceIsDark const):
* Source/WebKit/UIProcess/gtk/GtkSettingsManager.cpp:
(WebKit::GtkSettingsManager::highContrast const):
(WebKit::GtkSettingsManager::darkMode const):
(WebKit::GtkSettingsManager::settingsDidChange):
(WebKit::GtkSettingsManager::GtkSettingsManager):
* Source/WebKit/UIProcess/gtk/GtkSettingsManager.h: