Source/WebCore/platform/adwaita/ThemeAdwaita.h
@@ -56,9 +56,7 @@ private:
     Color m_accentColor { SRGBA<uint8_t> { 52, 132, 228 } };
 
     bool m_prefersReducedMotion { false };
-#if !USE(GTK4)
     bool m_prefersContrast { false };
-#endif
 };
 
 } // namespace WebCore
